--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
             <div class="row">
               <div class="col-lg-6">
                 <ul>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>Secret</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>This info cannot be publicized.</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>www.roman.com</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>091234567890</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Caloocan City</span></li>
@@ -126,7 +126,7 @@
                   <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>22</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>BSIT</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>romanramos@gmail.com</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Single:</strong> <span>Taken by Heaven</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Single:</strong> <span>Single</span></li>
                 </ul>
               </div>
             </div>
